Set the target lazily for the coalesced events

Set the target for the coalesced events when
they are accessed. This will cause properties
like offsetX/offsetY to be correctly calculated.

BUG=721485

Review-Url: https://codereview.chromium.org/2889733002
Cr-Commit-Position: refs/heads/master@{#474347}

Former-commit-id: edf6be53834747cea98abe29b96605a0ca3e1dbd